--- a/Project/app/src/main/res/layout/activity_login.xml
+++ b/Project/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,13 @@
     tools:context=".RegisterActivity"
     android:orientation="vertical">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:src="@drawable/logo"
+        android:id="@+id/Logo">
+    </ImageView>
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,5 +38,11 @@
         android:layout_height="wrap_content"
         android:text="Register"
         android:id="@+id/Register"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Forgot Password"
+        android:id="@+id/ForgotPassword"/>
 
 </LinearLayout>
