--- a/Project/app/src/main/res/layout/activity_profile.xml
+++ b/Project/app/src/main/res/layout/activity_profile.xml
@@ -6,53 +6,53 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="173dp"
-        android:layout_height="44dp"
+    <EditText
+        android:id="@+id/editName"
+        android:layout_width="170dp"
+        android:layout_height="50dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/textlines"
         android:text="Name: "
-        app:layout_constraintEnd_toStartOf="@+id/textView9"
-        app:layout_constraintStart_toStartOf="@+id/textView11"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintEnd_toStartOf="@+id/editEmail"
+        app:layout_constraintStart_toStartOf="@+id/editLocation"
+        app:layout_constraintTop_toBottomOf="@+id/profilePhoto" />
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="168dp"
+    <EditText
+        android:id="@+id/editEmail"
+        android:layout_width="170dp"
         android:layout_height="50dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="4dp"
         android:background="@drawable/textlines"
         android:text="Email: "
-        app:layout_constraintEnd_toEndOf="@+id/textView10"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintEnd_toEndOf="@+id/editAge"
+        app:layout_constraintTop_toBottomOf="@+id/profilePhoto" />
 
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="173dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="80dp"
+    <EditText
+        android:id="@+id/editAge"
+        android:layout_width="170dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="68dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/textlines"
         android:text="Age: "
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintStart_toStartOf="@+id/profilePhoto"
+        app:layout_constraintTop_toBottomOf="@+id/editEmail" />
 
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="173dp"
-        android:layout_height="44dp"
+    <EditText
+        android:id="@+id/editLocation"
+        android:layout_width="170dp"
+        android:layout_height="50dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/textlines"
         android:text="Location: "
-        app:layout_constraintEnd_toStartOf="@+id/textView10"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintEnd_toStartOf="@+id/editAge"
+        app:layout_constraintTop_toBottomOf="@+id/editName" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/profilePhoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -62,36 +62,36 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="378dp"
-        android:layout_height="126dp"
+    <EditText
+        android:id="@+id/editBio"
+        android:layout_width="370dp"
+        android:layout_height="130dp"
         android:layout_marginTop="172dp"
         android:background="@drawable/textlines"
         android:text="Bio: "
-        app:layout_constraintEnd_toEndOf="@+id/textView10"
+        app:layout_constraintEnd_toEndOf="@+id/editAge"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView11"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintStart_toStartOf="@+id/editLocation"
+        app:layout_constraintTop_toBottomOf="@+id/profilePhoto" />
 
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="256dp"
-        android:layout_height="131dp"
+    <EditText
+        android:id="@+id/editInterests"
+        android:layout_width="260dp"
+        android:layout_height="130dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/textlines"
         android:text="Interests: "
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintTop_toBottomOf="@+id/editBio" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="107dp"
-        android:layout_height="56dp"
+        android:id="@+id/saveChanges"
+        android:layout_width="110dp"
+        android:layout_height="60dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="84dp"
         android:text="Update Info"
-        app:layout_constraintStart_toEndOf="@+id/textView13"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintStart_toEndOf="@+id/editInterests"
+        app:layout_constraintTop_toBottomOf="@+id/editBio" />
 </androidx.constraintlayout.widget.ConstraintLayout>
