--- a/Project/app/src/main/res/layout/activity_profile.xml
+++ b/Project/app/src/main/res/layout/activity_profile.xml
@@ -1,61 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <EditText
         android:id="@+id/editName"
         android:layout_width="170dp"
         android:layout_height="50dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginTop="173dp"
         android:background="@drawable/textlines"
-        android:text="Name: "
-        app:layout_constraintEnd_toStartOf="@+id/editEmail"
-        app:layout_constraintStart_toStartOf="@+id/editLocation"
-        app:layout_constraintTop_toBottomOf="@+id/profilePhoto" />
+        android:hint="Name: "
+        app:layout_constraintTop_toTopOf="@+id/profilePhoto"
+        tools:layout_editor_absoluteX="16dp" />
 
     <EditText
         android:id="@+id/editEmail"
         android:layout_width="170dp"
         android:layout_height="50dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="4dp"
+        android:layout_marginTop="173dp"
         android:background="@drawable/textlines"
-        android:text="Email: "
-        app:layout_constraintEnd_toEndOf="@+id/editAge"
-        app:layout_constraintTop_toBottomOf="@+id/profilePhoto" />
+        android:hint="Email: "
+        app:layout_constraintTop_toTopOf="@+id/profilePhoto"
+        tools:layout_editor_absoluteX="224dp" />
 
     <EditText
         android:id="@+id/editAge"
         android:layout_width="170dp"
         android:layout_height="50dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="209dp"
+        android:layout_marginTop="246dp"
         android:background="@drawable/textlines"
-        android:text="Age: "
-        app:layout_constraintStart_toStartOf="@+id/profilePhoto"
-        app:layout_constraintTop_toBottomOf="@+id/editEmail" />
+        android:hint="Age: "
+        app:layout_constraintStart_toStartOf="@+id/editLocation"
+        app:layout_constraintTop_toTopOf="@+id/profilePhoto" />
 
     <EditText
         android:id="@+id/editLocation"
         android:layout_width="170dp"
         android:layout_height="50dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginTop="246dp"
         android:background="@drawable/textlines"
-        android:text="Location: "
-        app:layout_constraintEnd_toStartOf="@+id/editAge"
-        app:layout_constraintTop_toBottomOf="@+id/editName" />
+        android:hint="Location: "
+        app:layout_constraintTop_toTopOf="@+id/profilePhoto"
+        tools:layout_editor_absoluteX="16dp" />
 
     <ImageView
         android:id="@+id/profilePhoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,34 +59,31 @@
 
     <EditText
         android:id="@+id/editBio"
-        android:layout_width="370dp"
+        android:layout_width="375dp"
         android:layout_height="130dp"
-        android:layout_marginTop="172dp"
+        android:layout_marginTop="315dp"
         android:background="@drawable/textlines"
-        android:text="Bio: "
-        app:layout_constraintEnd_toEndOf="@+id/editAge"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editLocation"
-        app:layout_constraintTop_toBottomOf="@+id/profilePhoto" />
+        android:hint="Bio: "
+        app:layout_constraintTop_toTopOf="@+id/profilePhoto"
+        tools:layout_editor_absoluteX="19dp" />
 
     <EditText
         android:id="@+id/editInterests"
-        android:layout_width="260dp"
-        android:layout_height="130dp"
+        android:layout_width="375dp"
+        android:layout_height="80dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/textlines"
-        android:text="Interests: "
+        android:hint="Interests: "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editBio" />
 
     <Button
         android:id="@+id/saveChanges"
-        android:layout_width="110dp"
+        android:layout_width="100dp"
         android:layout_height="60dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="96dp"
         android:text="Update Info"
-        app:layout_constraintStart_toEndOf="@+id/editInterests"
-        app:layout_constraintTop_toBottomOf="@+id/editBio" />
+        app:layout_constraintTop_toTopOf="@+id/editInterests"
+        tools:layout_editor_absoluteX="155dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
