Profile xml edits

--- a/Project/app/src/main/res/layout/activity_profile.xml
+++ b/Project/app/src/main/res/layout/activity_profile.xml
@@ -9,32 +9,30 @@
         android:id="@+id/editName"
         android:layout_width="170dp"
         android:layout_height="50dp"
-        android:layout_marginTop="173dp"
+        android:layout_marginTop="172dp"
         android:background="@drawable/textlines"
         android:hint="Name: "
         app:layout_constraintTop_toTopOf="@+id/profilePhoto"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_editor_absoluteX="10dp" />
 
     <EditText
         android:id="@+id/editEmail"
         android:layout_width="170dp"
         android:layout_height="50dp"
-        android:layout_marginTop="173dp"
+        android:layout_marginStart="50dp"
         android:background="@drawable/textlines"
         android:hint="Email: "
-        app:layout_constraintTop_toTopOf="@+id/profilePhoto"
-        tools:layout_editor_absoluteX="224dp" />
+        app:layout_constraintStart_toEndOf="@+id/editName"
+        app:layout_constraintTop_toTopOf="@+id/editName" />
 
     <EditText
         android:id="@+id/editAge"
         android:layout_width="170dp"
         android:layout_height="50dp"
-        android:layout_marginStart="209dp"
-        android:layout_marginTop="246dp"
         android:background="@drawable/textlines"
         android:hint="Age: "
-        app:layout_constraintStart_toStartOf="@+id/editLocation"
-        app:layout_constraintTop_toTopOf="@+id/profilePhoto" />
+        app:layout_constraintStart_toStartOf="@+id/editEmail"
+        app:layout_constraintTop_toTopOf="@+id/editLocation" />
 
     <EditText
         android:id="@+id/editLocation"
@@ -43,8 +41,8 @@
         android:layout_marginTop="246dp"
         android:background="@drawable/textlines"
         android:hint="Location: "
-        app:layout_constraintTop_toTopOf="@+id/profilePhoto"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintStart_toStartOf="@+id/editName"
+        app:layout_constraintTop_toTopOf="@+id/profilePhoto" />
 
     <ImageView
         android:id="@+id/profilePhoto"
@@ -52,30 +50,29 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
     <EditText
         android:id="@+id/editBio"
-        android:layout_width="375dp"
+        android:layout_width="390dp"
         android:layout_height="130dp"
         android:layout_marginTop="315dp"
         android:background="@drawable/textlines"
         android:hint="Bio: "
-        app:layout_constraintTop_toTopOf="@+id/profilePhoto"
-        tools:layout_editor_absoluteX="19dp" />
+        app:layout_constraintStart_toStartOf="@+id/editLocation"
+        app:layout_constraintTop_toTopOf="@+id/profilePhoto" />
 
     <EditText
         android:id="@+id/editInterests"
-        android:layout_width="375dp"
+        android:layout_width="390dp"
         android:layout_height="80dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/textlines"
         android:hint="Interests: "
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/editBio"
         app:layout_constraintTop_toBottomOf="@+id/editBio" />
 
     <Button
