--- a/Project/app/src/main/res/layout/event_maker.xml
+++ b/Project/app/src/main/res/layout/event_maker.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".RegisterActivity">
+    tools:context=".EventMakerActivity">
 
     <EditText
         android:id="@+id/eventName"
@@ -40,5 +40,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Publish" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/bottom_navigation"
+        app:itemBackground="@color/black"
+        app:itemTextColor="@drawable/selector"
+        app:menu="@menu/menu_navigation"
+        android:layout_alignParentBottom="true"
+        />
 
 </LinearLayout>
