--- a/Project/app/src/main/res/menu/menu_navigation.xml
+++ b/Project/app/src/main/res/menu/menu_navigation.xml
@@ -13,6 +13,12 @@
         android:icon="@drawable/ic_baseline_emoji_events_24">
     </item>
     <item
+        android:id="@+id/maker"
+        android:title="Maker"
+        android:icon="@drawable/ic_baseline_add_24">
+    </item>
+
+    <item
         android:id="@+id/profile"
         android:title="Profile"
         android:icon="@drawable/ic_baseline_profile_24">
