--- a/Project/app/src/main/res/layout/activity_profile.xml
+++ b/Project/app/src/main/res/layout/activity_profile.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tool2s"
+    xmlns:tools2="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,7 +14,8 @@
         android:background="@drawable/textlines"
         android:hint="Name: "
         app:layout_constraintTop_toTopOf="@+id/profilePhoto"
-        tools:layout_editor_absoluteX="10dp" />
+        tools:layout_editor_absoluteX="10dp"
+        tools2:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/editEmail"
@@ -83,7 +85,8 @@
         android:text="Update Info"
         app:layout_constraintTop_toTopOf="@+id/editInterests"
         tools:layout_editor_absoluteX="155dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools2:ignore="MissingConstraints" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
