--- a/Project/app/src/main/res/layout/activity_profile.xml
+++ b/Project/app/src/main/res/layout/activity_profile.xml
@@ -6,22 +6,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/Logo"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:src="@drawable/logo"
+        tools2:ignore="MissingConstraints"
+        tools2:layout_editor_absoluteX="0dp"
+        tools2:layout_editor_absoluteY="-11dp"></ImageView>
+
     <EditText
         android:id="@+id/editName"
-        android:layout_width="170dp"
+        android:layout_width="130dp"
         android:layout_height="50dp"
-        android:layout_marginTop="172dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="188dp"
         android:background="@drawable/textlines"
         android:hint="Name: "
-        app:layout_constraintTop_toTopOf="@+id/profilePhoto"
-        tools:layout_editor_absoluteX="10dp"
-        tools2:ignore="MissingConstraints" />
+        app:layout_constraintStart_toStartOf="@+id/Logo"
+        app:layout_constraintTop_toTopOf="@+id/Logo"
+        tools2:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="10dp" />
 
     <EditText
         android:id="@+id/editEmail"
-        android:layout_width="170dp"
+        android:layout_width="130dp"
         android:layout_height="50dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="28dp"
         android:background="@drawable/textlines"
         android:hint="Email: "
         app:layout_constraintStart_toEndOf="@+id/editName"
@@ -29,22 +40,24 @@
 
     <EditText
         android:id="@+id/editAge"
-        android:layout_width="170dp"
+        android:layout_width="130dp"
         android:layout_height="50dp"
+
+        android:layout_marginStart="28dp"
         android:background="@drawable/textlines"
         android:hint="Age: "
-        app:layout_constraintStart_toStartOf="@+id/editEmail"
+        app:layout_constraintStart_toEndOf="@+id/editLocation"
         app:layout_constraintTop_toTopOf="@+id/editLocation" />
 
     <EditText
         android:id="@+id/editLocation"
-        android:layout_width="170dp"
+        android:layout_width="130dp"
         android:layout_height="50dp"
-        android:layout_marginTop="246dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/textlines"
         android:hint="Location: "
         app:layout_constraintStart_toStartOf="@+id/editName"
-        app:layout_constraintTop_toTopOf="@+id/profilePhoto" />
+        app:layout_constraintTop_toBottomOf="@+id/editName" />
 
     <ImageView
         android:id="@+id/profilePhoto"
@@ -59,9 +72,9 @@
 
     <EditText
         android:id="@+id/editBio"
-        android:layout_width="390dp"
+        android:layout_width="288dp"
         android:layout_height="130dp"
-        android:layout_marginTop="315dp"
+        android:layout_marginTop="280dp"
         android:background="@drawable/textlines"
         android:hint="Bio: "
         app:layout_constraintStart_toStartOf="@+id/editLocation"
@@ -69,7 +82,7 @@
 
     <EditText
         android:id="@+id/editInterests"
-        android:layout_width="390dp"
+        android:layout_width="288dp"
         android:layout_height="80dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/textlines"
@@ -81,21 +94,22 @@
         android:id="@+id/saveChanges"
         android:layout_width="100dp"
         android:layout_height="60dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="100dp"
         android:text="Update Info"
+        app:layout_constraintStart_toStartOf="@+id/editInterests"
         app:layout_constraintTop_toTopOf="@+id/editInterests"
-        tools:layout_editor_absoluteX="155dp"
+        tools2:ignore="MissingConstraints"
         tools:ignore="MissingConstraints"
-        tools2:ignore="MissingConstraints" />
+        tools:layout_editor_absoluteX="155dp" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/bottom_navigation"
-        app:itemBackground="@color/black"
-        app:itemTextColor="@drawable/selector"
-        app:menu="@menu/menu_navigation"
         android:layout_alignParentBottom="true"
+        app:itemBackground="@color/green_3"
+        app:itemTextColor="@drawable/selector"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:menu="@menu/menu_navigation" />
 </androidx.constraintlayout.widget.ConstraintLayout>
