--- a/Project/app/src/main/res/layout/layout.xml
+++ b/Project/app/src/main/res/layout/layout.xml
@@ -31,6 +31,7 @@
                 android:id="@+id/description"
                 android:layout_width="356dp"
                 android:layout_height="62dp"
+                android:layout_marginStart="16dp"
                 android:text="TextView"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
